[gd_scene load_steps=12 format=2]

[ext_resource path="res://Node2D.tscn" type="PackedScene" id=1]
[ext_resource path="res://preto.tscn" type="PackedScene" id=2]
[ext_resource path="res://fundo (1).jpg" type="Texture" id=3]
[ext_resource path="res://bola.tscn" type="PackedScene" id=4]
[ext_resource path="res://level.gd" type="Script" id=5]
[ext_resource path="res://joystix_monospace_font.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://videoplayback.mp3" type="AudioStream" id=7]

[sub_resource type="DynamicFont" id=3]
size = 39
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=4]
size = 39
font_data = ExtResource( 6 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 628.75, 6.125 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 38, 379 )

[node name="level" type="Node"]
script = ExtResource( 5 )

[node name="Fundo(1)" type="Sprite" parent="."]
modulate = Color( 0.580392, 0.580392, 0.580392, 1 )
position = Vector2( 640, 360.5 )
scale = Vector2( 0.5, 0.507639 )
texture = ExtResource( 3 )

[node name="scorePreto" type="Label" parent="."]
modulate = Color( 0, 0, 0, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -200.0
custom_fonts/font = SubResource( 3 )
text = "Teste"
align = 1
valign = 1

[node name="scoreBranco" type="Label" parent="."]
modulate = Color( 0, 0, 0, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 200.0
custom_fonts/font = SubResource( 4 )
text = "teste
"
align = 1
valign = 1

[node name="branco" parent="." instance=ExtResource( 1 )]
position = Vector2( 10, 20 )

[node name="teto" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="teto"]
position = Vector2( 643, -5 )
shape = SubResource( 1 )

[node name="chao" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="chao"]
position = Vector2( 643.75, 726.875 )
shape = SubResource( 1 )

[node name="preto" parent="." instance=ExtResource( 2 )]
position = Vector2( 22, -5 )

[node name="bola" parent="." instance=ExtResource( 4 )]
position = Vector2( 644, 369 )

[node name="esquerda" type="Area2D" parent="."]
position = Vector2( 1, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="esquerda"]
position = Vector2( -28, 369 )
shape = SubResource( 2 )

[node name="direita" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="direita"]
position = Vector2( 1314, 369 )
shape = SubResource( 2 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
volume_db = -14.667
autoplay = true

[connection signal="body_entered" from="esquerda" to="." method="_on_esquerda_body_entered"]
[connection signal="body_entered" from="direita" to="." method="_on_direita_body_entered"]
